objects/Template_Validation__c.object
<CustomObject>
    <fields>
        <fullName>Error_Location__c</fullName>
        <label>Error Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Formula_Fields__c</fullName>
        <label>Formula Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UI_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dynamic UI Elements</label>
        <referenceTo>Dynamic_UI_Elements__c</referenceTo>
        <relationshipLabel>Template Validations</relationshipLabel>
        <relationshipName>Template_Validations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Formula__c</fullName>
        <label>Validation Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Template Validation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Validation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>